create route and controller for allergies index. load allergies into state when app fires up. use them to create checkboxes in addItemForm

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,6 @@
 Next:
-* make allergies list a constant in state
+* 
+addItemForm.js should dynamically create state to mirror checkboxe
 
 * form for adding item to menu
 * action for above
