--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,7 @@
 
 Next:
-* add data validations
+
+* (add data validations) review data validations
 * make search work based on zip code
 * allow menus to be filtered by allergy
 * STYLE
